# Bit-Manipulation

./: CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: build-test.yaml  cmake-gtest.yaml
include/: bit_manip.h
include/bit_manip/: bit_manip.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  bit_manip_test.cpp  bit_manip_tests.cpp
